--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,3 @@
 prometheus_source: "10.24.24.14:9090"
 
-host_list:
-  ["sirius.cds.iisc.ac.in","bibha.cds.iisc.ac.in"]
-
-averaging_window: "10m"
+averaging_window_machine: "10m"
