--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,9 @@
 prometheus_source: "192.168.150.128:9090"
 
-averaging_window_machine: "10m"
+machine_window: "10m"
 
-averaging_window_application: "10m"
+app_scrape_interval: "5s"
+
+application_window: "10m"
+
+app_metric_percentile: "0.95"
