--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
-prometheus_source: "192.168.150.128:9090"
+prometheus_source: "10.24.24.29:9090"
+# prometheus_source: "10.16.70.246:9123"
 
 machine_window: "10m"
-
 app_scrape_interval: "5s"
-
 application_window: "10m"
-
 app_metric_percentile: "0.95"
+
+MAX_AVAIL: 0.8
